[gd_scene load_steps=3 format=3 uid="uid://bk7dn1ls8rgnp"]

[ext_resource type="Script" uid="uid://b5jgvvaw4qbqa" path="res://scenes/midi/piano_adaptive/piano_keys/piano_key_adaptive.gd" id="1"]
[ext_resource type="Script" uid="uid://dcli5out2ef8j" path="res://scenes/midi/piano_adaptive/piano_keys/piano_key_color_adaptive.gd" id="2"]

[node name="PianoKey" type="Control"]
custom_minimum_size = Vector2(20, 120)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1")

[node name="Key" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.95, 0.95, 0.95, 1)
script = ExtResource("2")

[node name="KeyBorder" type="NinePatchRect" parent="Key"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="KeyLabel" type="Label" parent="Key"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -25.0
offset_right = 10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ColorTimer" to="." method="deactivate"]
